2004-04-08  Eric Blake  <ebb9@byu.net>

	* src/class.cpp (Init) [!JIKES_DEBUG]: Fix regression in non-debug
	builds from previous patch.

2004-04-07  Eric Blake  <ebb9@byu.net>

	* src/depend.cpp (AddDependence): Move array, primitive processing
	here from elsewhere. Once again allows int[].class in a package.
	* src/expr.cpp (ProcessAmbiguousName, ProcessFieldAccess),
	(ProcessMethodName, GetAnonymousType): Use updates to
	AddDependence.

2004-04-04  Eric Blake  <ebb9@byu.net>

	* src/class.cpp (Init): Silence compiler warning.

2004-04-04  Musachy Barroso <insanus@bellsouth.net>

	Jikes patch 432.
	* src/control.cpp (Control): Check for system I/O errors.
	* src/control.h (general_io_errors, general_io_warnings): New
	fields.
	* src/error.cpp (SafeArray): New method for persistent strings.
	* src/error.h (IO_WARNING, IO_ERROR): New errors.
	* src/system.cpp (ProcessBootClassPath): 
	* src/system.cpp (ProcessExtDirs): 
	* src/system.cpp (ProcessClassPath): 

2004-04-04  Eric Blake  <ebb9@byu.net>

	* src/class.h (GetN): Return NULL-terminated byte arrays. 
	(CPUtf8Info::Bytes): Change to reflect the actual contents of the
	bytes array rather than debugging view - fixes bug 3913.
	(CPUtf8Info::contents, Init): Use contents only when debugging.
	* src/class.cpp: Update all callers.
	* src/symbol.cpp (UnboxedType): Adds missing Byte.
	* src/error.cpp: Fix some typos.
	(PrintFile): Be forgiving of NULL filename.

2004-04-04  Elliott Hughes  <enh@acm.org>

	* src/symbol.cpp (BoxedType): Adds the missing primitive type 'byte'.

2004-04-04  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp (GetAnonymousType): Fix bug 3692. If we failed to
	get a default constructor, we should give up before we require it.

2004-04-03  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Correctly fix the text of *all* package-related
	errors.

2004-04-03  Elliott Hughes  <enh@acm.org>

	* src/diagnose.cpp, src/error.cpp: Fix +D so that it outputs the